--- a/Phase1/src/paper_summarizer.ipynb
+++ b/Phase1/src/paper_summarizer.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,11 +34,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "query = \"finance\""
+    "query = \"semantic segmentation\""
    ]
   },
   {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,14 +92,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found PDF link: http://arxiv.org/pdf/1710.03211v2\n"
+      "Found PDF link: http://arxiv.org/pdf/2304.10326v1\n"
      ]
     }
    ],
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,11 +231,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\muham\\Desktop\\delete\\practice\\.venv\\Lib\\site-packages\\peft\\peft_model.py:157: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  adapters_weights = torch.load(\n"
+     ]
+    }
+   ],
    "source": [
-    "peft_model_id = \"../practice/results\" \n",
+    "peft_model_id = \"../practice/lora-flan-t5-base/model\" \n",
     "config = PeftConfig.from_pretrained(peft_model_id)\n",
     "\n",
     "model2 = AutoModelForSeq2SeqLM.from_pretrained(\n",
@@ -256,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +284,7 @@
     "        max_length=1024,\n",
     "        truncation=True,\n",
     "        return_tensors=\"pt\"\n",
-    "    )\n",
+    "    ).to(model2.device)\n",
     "\n",
     "    outputs = model2.generate(\n",
     "        input_ids=inputs.input_ids, \n",
@@ -296,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,14 +330,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Summary from T5-small: behavioral finance has three main objections to the theory of rational finance . the rational finance does not explain the predictability of asset returns . the theories are considered as anomalies and they are available to determine the difference between rationalistic and behavioralists . the problems relating to the theory of rational finance will be addressed in a multigenerational economy .\n"
+      "Summary from T5-small: in this technical report, we demonstrate our solution for 2019 COCO panoptic segmentation task. we use instance segmentation and semantic segmen- tation as a method which performs the s c in- stance and semantic segmen- tation separately, then combines the two to generate panop-tic segmentation results. our technique performs the instance segmentation and semantic segmen- tation separately, then combines the two to generate panop-tic segmentation results. to facilitate the results in this results, we use the same way as we have achieved an impressive re- sult, we compare the results of\n"
      ]
     }
    ],
@@ -338,14 +347,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Summary from FLAN-T5-base: **Main Research Objective:** To address the three main objections of behavioral finance to the theory of rational finance: (i) Predictability of asset returns; (ii) The Equity Premium; and (iii) The Volatility Puzzle. **Methodology:** * Developed a systematic approach to address all three objections: * Provided an explanation for the \"anomalies\" in rational finance utilizing statistical models. * Introduced statistical tools in the rational theory of finance to provide empirical evidence of non-rational chooses. * Provided a statistical framework to analyze whether and how behavioral finance can be applied in such situations. **Key Findings:** * Behavioral finance is a structural model of financial finance that is widely used and often criticized. * The behavioral finance model is based on the behavioral finance principles of the financial world. * Behavioral finance is the principal tool for generating financial data, and is commonly used as a method to help understand financial patterns. **Conclusions:** The paper provides a new approach to the behavioral finance theory. It addresses the four main objections to rational finance: * Predictability of asset returns; Equity Premium; and Volatility Puzzle. * Behavioral finance is an approach that focuses on the properties of financial markets that are characterized by their relative complexity. * Behavioral finance provides a new paradigm for assessing financial trends that are different from conventional financial models. * Behavioral finance is an alternative to standard financial model that includes factors such as time and market variables. * Behavioral finance leverages existing approaches such as behavioral and probability theory to provide empirical evidence for the behavior of the financial markets. **Conclusions:** * The rational finance model offers solutions to the three objections to rational finance. * The rational finance model is more sophisticated than behavioral finance, offering a range of insights on the behavior of the financial markets. * The research offers an approach to economics and behavioral finance that allows for a more accurate understanding of financial behavior and the dynamics of investment and risk.\n"
+      "Summary from FLAN-T5-base: **Main Research Objective:** To develop a joint COCO/Mapillary Workshop strategy for the 2019 COCO panoptic segmentation challenge. **Methodology:** * Created a dynamic model, Mask R-CNN, to extract the pixel-level category labels of a given image. * Recommendations to a network architecture for mask segmentation and semantic segmentation. * Contested several combinations of in-stance and semantic segmentation to achieve a strong performance. **Key Findings:** * Mask R-CNN was the best model for in-stance segmentation. * Mask R-CNN extended fast R-CNN (Fast R-CNN) to achieve the highest possible performance. * HTC model provided the best in-stance segmentation results for both the mask segmentation task and the semantic segmentation task. * The combined model was optimized for the best results on the Coco-Mapillary Workshop dataset. * The model achieved an optimal performance in the Coco-Mapillary Workshop task, achieving an overall performance of 47.1 based on Coco-Mapillary Workshop data. **Conclusions:** * The proposed approach improved the accuracy of the task by using an ensemble strategy. * It combined features of mask segmentation with semantic segmentation to create superior performance on the Coco-Mapillary Workshop dataset. * The ensemble strategy significantly enhanced the segmentation performance. * The model obtained the best in-stance segmentation result for the Coco-Mapillary Workshop dataset.\n"
      ]
     }
    ],
@@ -362,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
